--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
     font-weight: 400;
     color: #212529;
     font-family: Arvo;
-    /*background: black;*/
+    background: black;
 }
 
     /* navigation bar */
