--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
     font-weight: 400;
     color: #212529;
     font-family: Arvo;
-
+    background: black;
 }
 
     /* navigation bar */
@@ -108,8 +108,7 @@ body {
 .bg{
     background: #ebebeb;
     padding: 30px auto;
-    
-min-height: 300px;
+    min-height: 300px;
     margin: 30px auto;
     
 }
@@ -155,10 +154,10 @@ min-height: 300px;
 }
 
 .cont{
-    background: lightgray;
-    border: black 1px solid;
+    color: silver;
+    border: silver 1px solid;
     height: 220px;
-    margin: auto;
+    margin: 5px;
     border-radius: 10px;
     text-align: center;
     font-family: Arvo;
@@ -171,7 +170,7 @@ min-height: 300px;
 .midBar1Fluid {
     background: #0a2337;
     min-height: auto;
-    margin: 0 auto;
+    margin-top: 30px;
     text-align: center;
     padding: 0px;
     width: 100%;
@@ -181,21 +180,7 @@ min-height: 300px;
 }
 
 
-.head2 {
-    background: lightgray;
-    margin: auto;
-    text-align: center;
-    font-size: 1.25rem;
-    font-family: Arvo;
-    border-top: 1px black solid;
-    border-right: 1px black solid;
-    border-left: 1px black solid;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
 
-    padding-top: 2.5rem;
-
-}
 
 .item1 {
     font-family: Arvo;
@@ -203,16 +188,21 @@ min-height: 300px;
     min-height: 250px;
     margin-right: 30px;
     margin-left: 30px;
-    margin-top: 4rem;
+    margin-top: 2rem;
     text-align: justify;
+    color: silver;
 }
 .h4, h4 {
     color: silver;
     padding: 20px;
+    text-align: center;
 }
 .center {
     color: silver;
     text-align: justify;
+    overflow: hidden; /* Обрезаем все, что не помещается в область */
+    padding: 5px; /* Поля вокруг текста */
+    text-overflow: ellipsis;
 }
 
 .p, p {
@@ -220,22 +210,16 @@ min-height: 300px;
 }
 
 .carous{
-    background: lightgray;
+
     margin: 0 auto;
     min-height: 350px;
     font-family: Arvo;
     font-size: 1.25rem;
 
-    border-bottom: 1px black solid;
-    border-right: 1px black solid;
-    border-left: 1px black solid;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
 }
 .midBar {
-    background: lightgray;
-
-    border: black 1px solid;
+    color: silver;
+    border: silver 1px dotted;
     border-radius: 8px;
     padding: 40px;
     font-family: Arvo;
@@ -249,7 +233,7 @@ min-height: 300px;
 }
 */
 .header2 {
-    text-align: center;
+    text-align: justify;
     padding: 50px;
 }
 
@@ -292,7 +276,7 @@ min-height: 300px;
 
     padding: 40px;
     min-height: 300px;
-    text-align: center;
+    text-align: justify;
 }
 
 .img {
@@ -343,16 +327,16 @@ min-height: 300px;
     margin-bottom: 5rem;
 }
 .skills {
-    height: 550px;
+    height: 500px;
     border: 1px silver solid;
     border-radius: 8px;
     text-align: center;
     padding: 15px;
-    font-color: lightgray;
+    font-color: silver;
 }
 .text {
     min-height: 250px;
-    padding: 10px;
+
 }
 
 .midBar1Fluid1 {
