--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
     font-weight: 400;
     color: #212529;
     font-family: Arvo;
-    background: black;
+    background: #020202;
 }
 
     /* navigation bar */
@@ -162,7 +162,6 @@ body {
     text-align: center;
     font-family: Arvo;
     font-size: 1.25rem;
-
     padding: 50px;
 }
 /*Goal*/
@@ -180,8 +179,6 @@ body {
 }
 
 
-
-
 .item1 {
     font-family: Arvo;
     font-size: 0.75rem;
@@ -191,6 +188,7 @@ body {
     margin-top: 2rem;
     text-align: justify;
     color: silver;
+    font-variant: super;
 }
 .h4, h4 {
     color: silver;
@@ -203,6 +201,7 @@ body {
     overflow: hidden; /* Обрезаем все, что не помещается в область */
     padding: 5px; /* Поля вокруг текста */
     text-overflow: ellipsis;
+    font-variant: super;
 }
 
 .p, p {
@@ -273,29 +272,29 @@ body {
 }
 .header3 {
     color: silver;
-
+    font-variant: super;
     padding: 40px;
     min-height: 300px;
     text-align: justify;
 }
 
 .img {
-    border: 1px silver solid;
-    background: lightgray;
-    border-radius: 10px;
-    min-height: 370px;
-
-
+    height: 100%;
+    width: 100%;
+    padding: 0px;
+}
+.innovation{
+    max-width: 120%;
+    height: inherit;
 }
 
 .tt {
-    background: lightgray;
-    border: 1px black solid;
-    background: lightgray;
+    border: 1px silver dotted;
     min-height: 175px;
     border-radius: 10px;
     text-align: center;
     margin: 5px auto;
+    color: silver;
 }
 
 .about {
