--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@media (max-width: 576px) {
+@media (max-width: 580px) {
     .owl-carousel item {
         min-height: 360px;
     }
@@ -18,12 +18,9 @@
 }
 
 body {
-    padding: 0;
-    margin: 0;
-    font-weight: 400;
-    color: #212529;
+
     font-family: Arvo;
-    background: #020202;
+    /*background: #020202;*/
 }
     /* navigation bar */
 .navbar {
@@ -127,17 +124,8 @@ body {
 
 
 /* column */
-.row{
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
-}
 
-
-
-.main{
-    max-width: 1170px;
+.main {
     margin: 0 auto;
 }
 .headEr{
@@ -173,7 +161,6 @@ body {
     width: 100%;
     font-family: Arvo;
     font-size: 1.25rem;
-
 }
 
 
@@ -183,14 +170,13 @@ body {
     min-height: 250px;
     margin-right: 30px;
     margin-left: 30px;
-    margin-top: 2rem;
     text-align: justify;
     color: silver;
 
 }
 .h4, h4 {
     color: silver;
-    padding: 20px;
+    padding-top: 20px;
     text-align: center;
 }
 .center {
@@ -209,9 +195,8 @@ body {
 .carous{
 
     margin: 0 auto;
-    min-height: 350px;
-    font-family: Arvo;
-    font-size: 1.25rem;
+
+
 
 }
 .midBar {
@@ -334,14 +319,12 @@ body {
 
 .AAC {
     /*background: #f4f8ff;*/
-    min-height: 320px;
-    padding: 0px;
+    min-height: 300px;
+
 }
       /* OUR RECENT BLOG*/
-.BLOG {
-    height: 830px;
-    margin-bottom: 5rem;
-}
+
+
 .skills {
     min-height: 550px;
     border: 1px silver solid;
@@ -352,26 +335,19 @@ body {
 }
 .text {
     min-height: 250px;
-
-}
-
-.midBar1Fluid1 {
-    background: #071f31;
-    min-height: 650px;
-
 }
 
 .PLAYER a:hover {
     color: white;
     text-decoration: none;
 }
+
 a {
     color: silver;
 
 }
 
 .btn1 {
-
     display: inline-block;
     color: black;
     font-size: 125%;
@@ -393,4 +369,17 @@ a {
     padding: calc(.25em + 1px) .5em calc(.25em - 1px);
     border-color: rgba(177,159,0,1);
     box-shadow: inset 0 -1px 1px rgba(0,0,0,.1), inset 0 1px 2px rgba(0,0,0,.3), inset 0 0 0 60px rgba(255,255,0,.45);
+}
+
+.q1 {
+    background: #f9ba48;
+    min-height: 245px;
+    margin-top: 20px;
+}
+.head3 {
+    text-align: center;
+    color: silver;
+}
+textarea {
+    resize: vertical;
 }
