--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 body {
 
     font-family: Arvo;
-    /*background: #020202;*/
+    background: #020202;
 }
     /* navigation bar */
 .navbar {
@@ -190,6 +190,7 @@ body {
 
 .p, p {
     color: silver;
+
 }
 
 .carous{
@@ -329,8 +330,6 @@ body {
     min-height: 550px;
     border: 1px silver solid;
     border-radius: 8px;
-    text-align: justify;
-    padding: 15px;
     color: silver;
 }
 .text {
@@ -370,9 +369,9 @@ a {
     border-color: rgba(177,159,0,1);
     box-shadow: inset 0 -1px 1px rgba(0,0,0,.1), inset 0 1px 2px rgba(0,0,0,.3), inset 0 0 0 60px rgba(255,255,0,.45);
 }
-
+                    /*FOOTER*/
 .q1 {
-    background: #f9ba48;
+    background: #7e8e90;
     min-height: 245px;
     margin-top: 20px;
 }
@@ -381,5 +380,31 @@ a {
     color: silver;
 }
 textarea {
-    resize: vertical;
+    resize: none;
+    width: 547px;
+}
+input {
+    text-align: center;
+    color: gray;
+}
+.mail {
+    margin-bottom: 30px;
+}
+.batt {
+    display: block;
+    width: 140px;
+    height: 45px;
+    margin-left: 26px;
+    position: absolute;
+    bottom: 0%;
+    right: 51%;
+}
+
+.p1, p {
+    text-align: center;
+    padding-top: 30px;
+}
+
+.foot {
+    position: relative;
 }
